working web, very simple tho

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Miniport by HTML5 UP</title>
+    <title>My name is Pranav</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -21,7 +21,7 @@
         <li><a href="#top">Top</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <!-- <li><a href="#contact">Contact</a></li> -->
         <li><a href=""></a></li>
       </ul>
     </nav>
@@ -30,9 +30,13 @@
     <article id="top" class="wrapper style1">
       <div class="container">
         <div class="row">
+          <!--
           <div class="col-4 col-5-large col-12-medium">
-            <span class="image fit"><img src="images/pic00.jpg" alt=""/></span>
+            <span class="image fit"
+              ><img src="images/IMG_3847 2.jpg" alt=""
+            /></span>
           </div>
+          -->
           <div class="col-8 col-7-large col-12-medium">
             <header>
               <h1>Hi. I'm <strong>Pranav Narahari</strong>.</h1>
@@ -40,6 +44,20 @@
             <p>
               Welcome to my website.
             </p>
+            <p1>
+              Also find me on
+              <a
+                href="https://github.com/PranavNarahari"
+                class="icon brands fa-github"
+                ><span class="label">Github</span></a
+              >
+              and
+              <a
+                href="https://www.linkedin.com/in/pranav-narahari-1a2149150/"
+                class="icon brands fa-linkedin-in"
+                ><span class="label">Linkedin</span></a
+              >
+            </p1>
           </div>
         </div>
       </div>
@@ -58,11 +76,12 @@
               <span class="image fit"
                 ><img src="images/kenwayLogo.png" alt=""
               /></span>
-              <h3>IT Consultant @ Kenway Consulting</h3>
+              <h3>Technology Consultant Intern</h3>
               <p>Chicago, IL</p>
               <p>
-                Ornare nulla proin odio consequat sapien vestibulum ipsum primis
-                sed amet consequat lorem dolore.
+                My responsibilities include creating data integration pipelines,
+                designing data management solutions, andenhancing + supporting
+                internal software and cloud infrastructure.
               </p>
             </section>
           </div>
@@ -72,11 +91,13 @@
                 ><img src="images/uiucLogo.jpg" alt=""
               /></span>
               <h3 class="just for spacing"></h3>
-              <h3>Computer Science Course Assistant</h3>
+              <h3>Comp. Sci. Course Assistant</h3>
               <p>Champaign, IL</p>
               <p>
-                Ornare nulla proin odio consequat sapien vestibulum ipsum primis
-                sed amet consequat lorem dolore.
+                My responsibilities were to provide training in Java to both
+                beginner and intermediate programmers, to collaborate with a
+                team of faculty at weekly meetings, and to contribute new ideas
+                on teaching.
               </p>
             </section>
           </div>
@@ -89,8 +110,11 @@
               <h3>Senior Tutor</h3>
               <p>Worcester, MA</p>
               <p>
-                Ornare nulla proin odio consequat sapien vestibulum ipsum primis
-                sed amet consequat lorem dolore.
+                My responsibilities were to teach kids from age 4 to 17 basic
+                and complex mathematics and reading topics and techniques,
+                assess students math and reading skills and decide which subject
+                (s)he should begin learning, and data entry of students'
+                performance.
               </p>
             </section>
           </div>
@@ -100,6 +124,7 @@
 
     <!-- Portfolio -->
     <article id="portfolio" class="wrapper style3">
+      <!-- 
       <div class="container">
         <header>
           <h2>Here’s are some of my projects.</h2>
@@ -171,16 +196,21 @@
           >
         </footer>
       </div>
+  -->
     </article>
 
     <!-- Contact -->
     <article id="contact" class="wrapper style4">
+      <!---->
       <div class="container medium">
+        <!--
         <header>
           <h2>Have me make stuff for you.</h2>
           <p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
         </header>
+        -->
         <div class="row">
+          <!--
           <div class="col-12">
             <form method="post" action="#">
               <div class="row">
@@ -221,6 +251,7 @@
               </div>
             </form>
           </div>
+        -->
           <div class="col-12">
             <hr />
             <h3>Find me on ...</h3>
@@ -228,22 +259,16 @@
               <li>
                 <a
                   href="https://www.linkedin.com/in/pranav-narahari-1a2149150/"
-                  class="icon brands fa-instagram"
-                  ><span>Instagram</span></a
-                >
+                  class="icon brands fa-linkedin-in"
+                  ><span class="label"></span
+                ></a>
               </li>
-
               <li>
                 <a
-                  href="https://www.linkedin.com/in/pranav-narahari-1a2149150/"
-                  class="icon brands fa-linkedin-in"
-                  ><span class="label">LinkedIn</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands fa-github"
-                  ><span class="label">Github</span></a
-                >
+                  href="https://github.com/PranavNarahari"
+                  class="icon brands fa-github"
+                  ><span class="label"></span
+                ></a>
               </li>
               <!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
