--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="container">
         <header>
           <h2>Here are my work experiences.</h2>
-          <p>I have experience in consulting, software, and education</p>
+          <p>I have experience in consulting, data science, software engineering, and education.</p>
         </header>
         <div class="row aln-center">
           <div class="col-4 col-6-medium col-12-small">
@@ -80,8 +80,24 @@
               <p>Chicago, IL</p>
               <p>
                 My responsibilities include creating data integration pipelines,
-                designing data management solutions, andenhancing + supporting
+                designing data management solutions, and enhancing + supporting
                 internal software and cloud infrastructure.
+              </p>
+            </section>
+          </div>
+          <div class="col-4 col-6-medium col-12-small">
+            <section class="box style1">
+              <p></p>
+              <span class="image fit"
+                ><img src="images/Mathematica_logo.png" alt=""
+              /></span>
+              <h3 class="just for spacing"></h3>\
+              <h3>Vue.js Developer Intern</h3>
+              <p>Boston, MA</p>
+              <p>
+                My responsibilities were to develop a multifaceted web application 
+                to create clarity in the educational space for teachers. This project 
+                utilized amazon web services.
               </p>
             </section>
           </div>
@@ -102,6 +118,7 @@
               </p>
             </section>
           </div>
+          <!--
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
               <span class="image fit"
@@ -119,19 +136,20 @@
               </p>
             </section>
           </div>
+          -->
         </div>
       </div>
     </article>
 
     <!-- Portfolio -->
     <article id="portfolio" class="wrapper style3">
-      <!-- 
+      <!--
       <div class="container">
         <header>
           <h2>Here’s are some of my projects.</h2>
           <p>
             I have experience in web development, app development, and creating
-            an online business.
+            online businesses.
           </p>
         </header>
         <div class="row">
@@ -197,7 +215,7 @@
           >
         </footer>
       </div>
-  -->
+    -->
     </article>
 
     <!-- Contact -->
