--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <span class="image fit"
                 ><img src="images/Mathematica_logo.png" alt=""
               /></span>
-              <h3 class="just for spacing"></h3>\
+              <h3 class="just for spacing"></h3>
               <h3>Vue.js Developer Intern</h3>
               <p>Boston, MA</p>
               <p>
